<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">悟空维修-工程师版</string>


    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>
    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="conversation_messages">会话</string>
    <string name="home">首页</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我的</string>
    <string name="discover_title">发现</string>
    <string name="chat_cloudCodeNotDeployTips">云代码未部署，请到项目主页根据说明来部署</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="chat_image">图片</string>
    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>
    <string name="loginFailed">登录失败。</string>
    <string name="chat_audio">语音</string>
    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>

    <string name="utils_kilometres">公里</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="discover_fragment_sort">排序</string>悟空维修-工程师版
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>

    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中...</string>
    <string name="chat_common_cancel">取消</string>
    <string name="chat_common_emptyStr" />
    <string name="chat_position">位置</string>
    <string name="chat_common_avatar">头像</string>
    <string name="chat_common_username">用户名</string>
    <string name="chat_common_nickname">昵称</string>
    <string name="chat_common_please_input_hint">请输入{0}</string>
    <string name="chat_common_change_title">{0}</string>
    <string name="chat_newMessage">新的消息</string>
    <string name="chat_cannotFindResult">抱歉，未能找到结果</string>
    <string name="chat_pleaseCheckNetwork">请检查网络</string>
    <string name="load_more_footer_hint_normal">查看更多</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>

    <string name="chat_bottom_redpacket">红包</string>
    <string name="money_msg_take_money">你领取了自己的红包</string>
    <string name="money_msg_take_someone_money">你领取了%1$s的红包</string>
    <string name="money_msg_someone_take_money">%1$s领取了你的红包</string>
    <string name="money_msg_someone_take_money_same">%1$s领取了%2$s的红包</string>
    <string name="leancloud_luckymoney">LeanCloud红包</string>
    <string name="exclusive_red_envelope">专属红包</string>
    <string name="chat_bottom_transfer">转账</string>
    <string name="transfer_msg_sent">对方已收到转账</string>
    <string name="transfer_msg_received">已收到对方转账</string>


    <string name="register_name">请输入用户名</string>
    <string name="register_password_defferent">输入手机号码不正确</string>
    <string name="register_password">请输入密码</string>
    <string name="login_error">账号或者密码错误</string>
    <string name="hot_tip">特别提示</string>
    <string name="hot_tip_content">\t\t\t目前本软件主要针对本公司内部使用，非本公司员工如需使用，需要提交相应资质资料后并审核通过才能使用。</string>
    <string name="order_number">订单号：</string>
    <string name="machine_brand">机器品牌：</string>
    <string name="machine_lx">机器类型：</string>
    <string name="bxqy">报修企业：</string>
    <string name="machine_gzms">故障描述：</string>
    <string name="bxsj">报修时间：</string>
    <string name="month_order_num">本月服务订单数</string>
    <string name="jqh">机器号：</string>
    <string name="bxgzms">报修故障描述：</string>
    <string name="wxjl">维修记录：</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm">确认</string>

    <string name="scan_text">将条码放入框内, 即可自动扫描</string>
    <string name="barcode_msg">条形编码：</string>
    <string name="hint_qymc">请填写企业名称</string>
    <string name="hint_qydz">请填写企业地址</string>
    <string name="hint_jqlx">请填写机器类型</string>
    <string name="hint_jqxh">请填写机器型号</string>
    <string name="hint_jqxlh">请填写机器序列号</string>
    <string name="hint_lxrxm">请填写联系人姓名</string>
    <string name="hint_lxrdh">请填写联系人电话</string>
    <string name="jqbh">机器编号：</string>
    <string name="jqlx">机器类型：</string>
    <string name="gzms">故障描述：</string>
    <string name="jqpp">机器品牌：</string>
    <string name="gztp">故障图片：</string>
    <string name="qrjd">确认接单</string>
    <string name="xzyl">卸载压力：</string>
    <string name="jzyl">加载压力：</string>
    <string name="zxgy">最小罐压：</string>
    <string name="yxsj">运行时间：</string>
    <string name="jzsj">加载时间：</string>
    <string name="klyc">空滤压差：</string>
    <string name="ylyc">油滤压差：</string>
    <string name="yfyc">油分压差：</string>
    <string name="hjwd">环境温度：</string>
    <string name="pqwd">排气温度：</string>
    <string name="zdjdl">主电机电流：</string>
    <string name="dy">电压：\t\t\t\t\t</string>
    <string name="wxxq">维修详情：</string>
    <string name="bxr">报修人：</string>
    <string name="dh">电话：</string>
    <string name="dz">地址：</string>
    <string name="tj">提交</string>
    <string name="wxzt">维修完成</string>
    <string name="wxxq1">维修详情</string>
    <string name="yjj">已解决</string>
    <string name="wjj">未解决</string>
    <string name="pgdh">派工单号：</string>
    <string name="msg_input_dialog_text">对不起，该编号对应信息已存在，无法添加！如有问题，请联系客服。</string>


    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="new_password_two">请再次输入新密码</string>
    <string name="hpl">好评率</string>
    <string name="dqmc">当前名次：</string>
    <string name="jzs">集赞数：</string>
    <string name="zds">总单数：</string>
    <string name="hps">好评数：</string>
    <string name="zps">中评数：</string>
    <string name="cps">差评数：</string>
    <string name="chat_record_button_releaseToCancel">松开手指，取消录音</string>
    <string name="chat_record_button_slideUpToCancel">手指上滑，取消发送</string>
    <string name="chat_record_button_pleaseSayMore">说多点吧～</string>
    <string name="chat_cancelRecord">取消录音</string>
    <string name="chat_bottom_picture">照片</string>
    <string name="chat_bottom_camera">拍摄</string>
    <string name="chat_bottom_location">位置</string>
    <string name="message_is_null">消息不能为空</string>
    <string name="chat_emotion">表情</string>
    <string name="chat_activity_select_picture">选择图片</string>
    <string name="chat_bottom_record_layout_pressToRecord">按住录音</string>
    <string name="already">企业信息已经录入,无需重复提交。</string>


</resources>