<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_msg_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_top"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/et_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/msg_input_tv_style"
                    android:text="@string/barcode_msg" />

                <TextView
                    android:id="@+id/tv_bar_code"
                    style="@style/msg_input_tv_style"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/msg_input_tv_style"
                    android:text="机器序列号:" />

                <TextView
                    android:id="@+id/tv_jqxlh"
                    style="@style/msg_input_tv_style"
                    android:text="" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_qymc"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_qymc" />

            <EditText
                android:id="@+id/et_qydz"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_qydz" />

            <EditText
                android:id="@+id/et_jqlx"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_jqlx" />

            <EditText
                android:id="@+id/et_jqxh"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_jqxh" />

            <EditText
                android:id="@+id/et_name"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_lxrxm" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/msg_input_et_style2"
                android:hint="@string/hint_lxrdh" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/but_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/machineyellow"
        android:gravity="center"
        android:text="提交"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_18" />
</LinearLayout>
