<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_machine_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_top"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/lv_top"
        android:paddingTop="@dimen/lv_top">

        <TextView
            style="@style/tv_home_item_left_style"
            android:text="@string/jqbh"
            android:textSize="@dimen/tv_size_18" />
    </LinearLayout>

    <View
        style="@style/LCIMDividerLine.Horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/lv_top"
            android:paddingTop="@dimen/lv_top">

            <TextView
                style="@style/tv_home_item_left_style"
                android:layout_height="wrap_content"
                android:text="@string/xzyl" />

            <TextView
                android:id="@+id/tv_xzyl"
                style="@style/tv_home_item_right_style"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/lv_top"
                android:paddingTop="@dimen/lv_top">

                <TextView
                    style="@style/tv_home_item_left_style"
                    android:layout_height="wrap_content"
                    android:text="@string/jzyl" />

                <TextView
                    android:id="@+id/tv_jzyl"
                    style="@style/tv_home_item_right_style"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/lv_top"
            android:paddingTop="@dimen/lv_top">

            <TextView
                style="@style/tv_home_item_left_style"
                android:layout_height="wrap_content"
                android:text="@string/zxgy" />

            <TextView
                android:id="@+id/tv_zxgy"
                style="@style/tv_home_item_right_style"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/lv_top"
                android:paddingTop="@dimen/lv_top">

                <TextView
                    style="@style/tv_home_item_left_style"
                    android:layout_height="wrap_content"
                    android:text="@string/yxsj" />

                <TextView
                    android:id="@+id/tv_yxsj"
                    style="@style/tv_home_item_right_style"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/lv_top"
            android:paddingTop="@dimen/lv_top">

            <TextView
                style="@style/tv_home_item_left_style"
                android:layout_height="wrap_content"
                android:text="@string/jzsj" />

            <TextView
                android:id="@+id/tv_jzsj"
                style="@style/tv_home_item_right_style"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/lv_top"
                android:paddingTop="@dimen/lv_top">

                <TextView
                    style="@style/tv_home_item_left_style"
                    android:layout_height="wrap_content"
                    android:text="@string/klyc" />

                <TextView
                    android:id="@+id/tv_klyc"
                    style="@style/tv_home_item_right_style"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/lv_top"
            android:paddingTop="@dimen/lv_top">

            <TextView
                style="@style/tv_home_item_left_style"
                android:layout_height="wrap_content"
                android:text="@string/ylyc" />

            <TextView
                android:id="@+id/tv_ylyc"
                style="@style/tv_home_item_right_style"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/lv_top"
                android:paddingTop="@dimen/lv_top">

                <TextView
                    style="@style/tv_home_item_left_style"
                    android:layout_height="wrap_content"
                    android:text="@string/yfyc" />

                <TextView
                    android:id="@+id/tv_yfyc"
                    style="@style/tv_home_item_right_style"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/lv_top"
            android:paddingTop="@dimen/lv_top">

            <TextView
                style="@style/tv_home_item_left_style"
                android:layout_height="wrap_content"
                android:text="@string/hjwd" />

            <TextView
                android:id="@+id/tv_hjwd"
                style="@style/tv_home_item_right_style"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/lv_top"
                android:paddingTop="@dimen/lv_top">

                <TextView
                    style="@style/tv_home_item_left_style"
                    android:layout_height="wrap_content"
                    android:text="@string/pqwd" />

                <TextView
                    android:id="@+id/tv_pqwd"
                    style="@style/tv_home_item_right_style"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/lv_top"
        android:paddingTop="@dimen/lv_top">

        <TextView
            style="@style/tv_home_item_left_style"
            android:layout_height="wrap_content"
            android:text="@string/zdjdl" />

        <TextView
            android:id="@+id/tv_zdjdl"
            style="@style/tv_home_item_right_style"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/lv_top"
        android:paddingTop="@dimen/lv_top">

        <TextView
            style="@style/tv_home_item_left_style"
            android:layout_height="wrap_content"
            android:text="@string/dy" />

        <TextView
            android:id="@+id/tv_dy"
            style="@style/tv_home_item_right_style"
            android:text="" />
    </LinearLayout>


</LinearLayout>